2002-11-29  Ross Burton  <ross@burtonini.com>

	* Makefile.am (EXTRA_DIST): Put the source of the schemas in the
	dist, not the generated files.

2002-11-27  Ross Burton  <ross@burtonini.com>

	* same-gnome.c (load_scenario): Fix a typo, closing #99684.

2002-11-21  Tim Musson  <trmusson@ihug.co.nz>

	* same-gnome.c (show_scores): Made score dialog modal. (Bug #97320)

2002-11-25  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Fixed the GConf install location, thanks to Loz
	<gnome2@flower.powernet.co.uk>. Closes #99393.

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* same-gnome.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-18  Jeremy Browne  <jeremy@synonymous.ca>

	* same-gnome.c (game_quit_callback): Changes to quit dialog for
	consistency with other parts of gnome-games package. (Bug #97321)

2002-10-31  Ross Burton  <ross@burtonini.com>

	* same-gnome.c (load_scenario): Call gtk_main_quit() instead of
	exit().

2002-10-16  Ross Burton  <ross@burtonini.com>

	* same-gnome.c: The Preferences dialog cannot be cancelled as its
	Instant Apply, so remove the "selected_scenario" variable and the
	revert code.

2002-10-16  Ross Burton  <ross@burtonini.com>

	* same-gnome.c (fill_menu): Strip the file extension from the
	filename when displaying in the list of scenarios.
	(game_preferences_callback): Remove the labelled frame. These go
	towards closing #94797.

2002-08-23  Ross Burton  <ross@burtonini.com>

	* same-gnome.c: Enable the high scores dialog. Patch from Andrew
	Sobala <andrew@sobala.net>, fixing #84235.

2002-08-18  Andrew Sobala <andrew@sobala.net>

	* same-gnome.c: Use the stock icons for the Quit dialog, fixing
	#73031.

2002-06-19  Ross Burton  <ross@burtonini.com>

	* same-gnome.c (game_about_callback): Load the image from the
	application pixmap path, not the system path.

2002-05-31  Bastien Nocera  <hadess@hadess.net>

	* same-gnome.c: (load_scenario): patch from Xing Wang to fix